analyzer/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-text-classifier-service
spec:
  type: NodePort
  selector:
    app: ai-text-classifier
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30007
