analyzer/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-text-classifier-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ai-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ai-text-classifier-service
            port:
              number: 8000
